--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -22179,7 +22179,7 @@
 			<p><em>ⲡⲉϫⲁϥ ⲛⲏⲓ ϫⲉ ϯϣⲓⲛⲓ ⲉⲣⲟϥ ϫⲉ ⲁϥϧⲱⲛⲧ ⲛ̀ϫⲉ ⲡⲁⲥⲏⲟⲩ ⲟⲩⲟϩ ϣⲁⲣⲉ ⲫϯ ϣⲓⲛⲓ ⲛ̀ⲥⲱⲓ ⲙ̀ⲫⲛⲁⲩ ⲛ̀ⲣⲟⲩϩⲓ ⲛ̀ⲣⲁⲥϯ ⲛ̀ⲥⲟⲩⲓ̅ⲅ̅ ⲟⲩⲟϩ ⲡⲁⲓⲅ̅ ⲛ̀ⲉϩⲟⲟⲩ ⲉⲧⲁⲓⲁⲧⲟⲩ ⲙ̀ⲡⲓⲥⲁϫⲓ ⲛⲉⲙ ⲣⲱⲙⲓ ⲛⲁⲓⲟϩⲓ ⲉⲣⲁⲧ ⲡⲉ ⲙ̀ⲡⲉⲙⲑⲟ ⲉⲃⲟⲗ ⲙ̀ⲡⲭ︤ⲥ︥ ⲫϯ ⲟⲩⲟϩ ⲁϥⲓⲣⲓ ⲙ̀ⲡⲁⲗⲟⲅⲟⲥ ⲓⲥϫⲉⲛ ⲁϫⲡⲑ̅ ⲛ̀ⲥⲁϥ ⲟⲩⲟϩ ϯϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲡⲉϥⲛⲁⲓ ⲛⲁⲧⲁϩⲟⲓ. ⲁⲛⲟⲕ ⲇⲉ ⲡⲉϫⲏⲓ ⲛⲁϥ ϫⲉ ⲁⲣⲓ ϯⲁⲅⲁⲡⲏ ⲙⲁⲧⲁϫⲣⲉ ⲡⲉⲕϩⲏⲧ ⲛ̀ⲟⲩⲕⲟⲩϫⲓ ⲛ̀ⲱⲓⲕ ⲛⲉⲙ ⲟⲩⲙⲱⲟⲩ ϫⲉ ⲓⲥ ⲅ̅ ⲛ̀ⲉϩⲟⲟⲩ ⲙ̀ⲡⲉⲕϫⲉⲙϯⲡⲓ ⲛ̀ϩⲗⲓ.</em></p>
 			<p><em>ⲁϥⲉⲣⲟⲩⲱ ϫⲉ ϯⲛⲁϫⲉⲙϯⲡⲓ ⲛ̀ϩⲗⲓ ⲛ̀ⲧⲣⲟⲫⲏ ⲁⲛ ϫⲉ ⲛ̀ⲧⲉ ⲡⲁⲓⲕⲟⲥⲙⲟⲥ ϣⲁⲧⲁⲃⲱⲗ ⲉⲃⲟⲗ ⲛ̀ⲧⲁⲛⲏⲥⲧⲓⲁ ϧⲁⲧⲉⲛ ⲡϭⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ⲡⲁⲟⲩⲣⲟ. ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ ⲇⲉ ⲡⲉϫⲁϥ ϫⲉ ⲡⲓⲙⲁⲣⲧⲩⲣⲟⲥ ⲉⲑⲟⲩⲁⲃ ⲛ̀ⲧⲉ ⲡⲭ︤ⲥ︥ ⲫϯ ⲓⲅⲛⲁⲧⲓⲟⲥ ⲡⲓⲑⲉⲟⲫⲟⲣⲟⲥ ϣⲱⲡⲓ ⲛⲉⲙⲏⲓ ϣⲁϯⲥⲓⲛⲓ ⲙ̀ⲡⲁⲓⲓⲁⲣⲟ ⲛ̀ⲭⲣⲱⲙ ⲉⲧⲥⲱⲕ ϩⲓⲧϩⲏ ⲙ̀ⲡⲓⲭ︤ⲥ︥ ϫⲉ ⲟⲩⲛⲓϣϯ ⲧⲉ ϯϩⲟϯ ⲛ̀ⲧⲉ ⲡⲓⲙⲁ ⲉⲧⲉⲙⲙⲁⲩ. ⲡⲉϫⲏⲓ ⲇⲉ ⲛⲁϥ ϫⲉ ⲡⲁϭⲥ ⲛ̀ⲓⲱⲧ ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓϧⲓⲥⲓ ⲧⲏⲣⲟⲩ ⲛⲁⲓⲛⲏⲥⲧⲓⲁ ⲛⲉⲙ ⲛⲁⲓϣⲗⲏⲗ ⲛⲉⲙ ⲛⲁⲓⲉϫⲱⲣϩ ⲛ̀ϣⲣⲱⲓⲥ ⲉⲧⲁⲕⲉⲣϩⲩⲡⲟⲙⲉⲛⲓⲛ ⲉⲣⲱⲟⲩ ⲉⲑⲃⲉ ⲫϯ ⲕⲉ̀ⲣϩⲟϯ ϩⲱⲕ ϧⲁⲧϩⲏ ⲙ̀ⲡⲓⲓⲁⲣⲟ ⲛ̀ⲭⲣⲱⲙ ⲉⲧⲉⲙⲙⲁⲩ.</em></p>
 			<p><em>ⲡⲉϫⲁϥ ⲛⲏⲓ ϫⲉ ⲛⲓⲙ ⲡⲉ ⲡⲓⲣⲱⲙⲓ ⲉⲑⲛⲁⲉⲣ ⲉⲃⲟⲗ ⲉ ϣⲧⲉⲙϫⲉⲙϯⲡⲓ ⲙ̀ⲡⲓⲓⲁⲣⲟ ⲛ̀ⲭⲣⲱⲙ ⲉⲧⲉⲙⲙⲁⲩ. ⲟⲩⲟϩ ⲛⲁϥⲥⲁϫⲓ ⲁⲛ ϫⲉ ⲡⲉ ⲛⲉⲙ ϩⲗⲓ ⲛ̀ⲣⲱⲙⲓ.</em></p>
-			<p><em>ⲉⲧⲁ ϣⲱⲣⲡ ⲇⲉ ϣⲱⲡⲓ ⲁ ⲡⲓⲙⲁ ⲧⲏⲣⲇ ⲙⲟϩ ⲛ̀ⲣⲱⲙⲓ ⲥⲁϧⲟⲩⲛ ⲛⲉⲙ ⲥⲁⲃⲟⲗ ⲁϥⲉⲣ ⲡⲓⲉϩⲟⲟⲩ ⲧⲏⲣϥ ⲉⲧⲉⲙⲙⲁⲩ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲁⲓ ⲉⲩⲑⲱϩⲥ ⲙ̀ⲙⲟϥ ⲛ̀ⲛⲉϩ ⲉⲡϧⲁⲉ ⲇⲉ ⲁϥϫⲱ ⲙ̀ⲡⲁⲓⲥⲁϫⲓ ϫⲉ ϩⲏⲡⲡⲉ ⲁⲓⲓⲣⲓ ⲙ̀ⲡⲓⲟⲩⲁϩⲥⲁϩⲛⲓ ⲛ̀ⲧⲉ ⲡϭⲟⲓⲥ ⲟⲩⲟϩ ⲁⲓⲓⲣⲓ ⲙ̀ⲡⲁⲥⲟⲃϯ ⲟⲩⲟϩ ⲡⲁⲓⲣⲏϯ ⲁϥⲟⲩⲱⲛ ⲛ̀ⲣⲱϥ ⲁϥϯ ⲙ̀ⲡⲓⲡ︤ⲛ︦ⲁ︥ ⲉ ⲛⲉⲛϫⲓϫ ⲙ̀ⲫϯ ⲙ̀ⲡⲓⲛⲁⲩ ⲉⲣⲉ ⲫⲣⲏ ⲛⲁϩⲱⲧⲡ ⲛ̀ⲥⲟⲩⲓ̅ⲅ̅ ⲙ̀ⲡⲓⲁⲃⲟⲧ ⲉⲡⲏⲡ.</em></p>
+			<p><em>ⲉⲧⲁ ϣⲱⲣⲡ ⲇⲉ ϣⲱⲡⲓ ⲁ ⲡⲓⲙⲁ ⲧⲏⲣϥ ⲙⲟϩ ⲛ̀ⲣⲱⲙⲓ ⲥⲁϧⲟⲩⲛ ⲛⲉⲙ ⲥⲁⲃⲟⲗ ⲁϥⲉⲣ ⲡⲓⲉϩⲟⲟⲩ ⲧⲏⲣϥ ⲉⲧⲉⲙⲙⲁⲩ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲁⲓ ⲉⲩⲑⲱϩⲥ ⲙ̀ⲙⲟϥ ⲛ̀ⲛⲉϩ ⲉⲡϧⲁⲉ ⲇⲉ ⲁϥϫⲱ ⲙ̀ⲡⲁⲓⲥⲁϫⲓ ϫⲉ ϩⲏⲡⲡⲉ ⲁⲓⲓⲣⲓ ⲙ̀ⲡⲓⲟⲩⲁϩⲥⲁϩⲛⲓ ⲛ̀ⲧⲉ ⲡϭⲟⲓⲥ ⲟⲩⲟϩ ⲁⲓⲓⲣⲓ ⲙ̀ⲡⲁⲥⲟⲃϯ ⲟⲩⲟϩ ⲡⲁⲓⲣⲏϯ ⲁϥⲟⲩⲱⲛ ⲛ̀ⲣⲱϥ ⲁϥϯ ⲙ̀ⲡⲓⲡ︤ⲛ︦ⲁ︥ ⲉ ⲛⲉⲛϫⲓϫ ⲙ̀ⲫϯ ⲙ̀ⲡⲓⲛⲁⲩ ⲉⲣⲉ ⲫⲣⲏ ⲛⲁϩⲱⲧⲡ ⲛ̀ⲥⲟⲩⲓ̅ⲅ̅ ⲙ̀ⲡⲓⲁⲃⲟⲧ ⲉⲡⲏⲡ.</em></p>
 			<p>Extraits des mémoires de Dioscore<sup class="footnote">1</sup>.</p>
 			<p>I</p>
 			<p><em></em></p>
