--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -22221,7 +22221,76 @@
 			<p><em>Ⲡⲕⲉⲥⲉⲡⲓ ⲛ̀ⲛⲓϩⲉⲗⲗⲏⲛⲟⲥ ⲟⲩⲙⲏϣ ⲛ̀ϧⲏⲧⲟⲩ ⲁⲩϣⲱⲡⲓ ⲛ̀ⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ⲟⲩⲟϩ ⲁⲩϭⲓⲱⲙⲥ ϩⲁⲛⲕⲉⲭⲱⲟⲩⲛⲓ ⲙ̀ⲡⲟⲩⲟⲩⲱϣ ⲁⲗⲗⲁ ⲁⲩϭⲓ ⲙ̀ⲫⲏ ⲉⲧⲉ ⲛ̀ⲧⲱⲟⲩ ⲁⲩϩⲓⲧⲟⲩ ⲉ ⲛⲓⲙⲱⲟⲩ ⲛⲉⲙ ⲛⲓⲗⲁⲕⲕⲟⲥ ⲁⲩϣⲉ ⲛⲱⲟⲩ ⲙ̀ⲙⲁⲩⲁⲧⲟⲩ ⲛⲉⲙ ⲛⲟⲩⲓⲇⲱⲗⲟⲛ ⲉ ⲟⲩⲙⲁ ⲛ̀ϣⲁϥⲉ.</em></p>
 			<p><em>Ⲁⲩϭⲓⲏⲡⲓ ⲛ̀ⲛⲓⲓⲇⲱⲗⲟⲛ ⲉⲧⲁⲩⲟⲩⲟϫⲡⲟⲩ ⲙ̀ⲡⲓⲛⲁⲩ ⲉⲧⲉⲙⲙⲁⲩ ⲁⲛϫⲉⲙⲟⲩ ⲉⲩⲓⲣⲓ ⲛ̀ϣⲟⲙⲧ ⲛ̀ϣⲉ ⲥⲟⲟⲩ ⲛ̀ⲓⲇⲱⲗⲟⲛ. ⲛⲏ ⲇⲉ ⲉⲧⲁⲩⲫⲱⲧ ⲁ ⲛⲓⲭⲣⲏⲥⲧⲓⲁⲛⲟⲥ ϣⲱⲡⲓ ϧⲉⲛ ⲛⲟⲩⲏⲓ.</em></p>
 			<p class="footnote">1. Cod. <em>ϯⲟⲩ</em>.</p>
-			<p></p>
+			<p>Le voleur converti<sup class="footnote">1</sup>.</p>
+			<p><em>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ ⲁ ⲡⲥⲱⲓⲧ ⲙ̀ⲡⲉⲛⲓⲱⲧ ⲁⲃⲃⲁ ⲇⲁⲛⲓⲏⲗ ⲥⲱⲣ ⲉⲃⲟⲗ ϧⲉⲛ ⲙⲁⲓ ⲛⲓⲃⲉⲛ ⲟⲩⲟϩ ⲛⲁⲣⲉ ϩⲁⲛⲙⲏϣ ⲉⲣⲉⲡⲓⲑⲩⲙⲓⲛ ⲡⲉ ⲉ ϣⲁϣⲛⲓ ⲉ ⲡⲉϥⲥⲙⲟⲩ ⲉⲑⲟⲩⲁⲃ ⲙⲁⲗⲓⲥⲧⲁ ⲛⲓⲙⲟⲛⲏ ⲛ̀ⲧⲉ ⲛⲏ ⲉⲑⲟⲩⲁⲃ.</em></p>
+			<p><em>Ⲛⲉ ⲟⲩⲟⲛ ⲟⲩⲙⲟⲛⲏ ϧⲉⲛ ⲡⲁⲓⲑⲟϣ ⲛ̀ⲟⲩⲱⲧ ⲉⲩⲭⲏ ⲛ̀ϧⲏⲧⲥ ϩⲁⲛⲙⲏϣ ⲙ̀ⲡⲁⲣⲑⲉⲛⲟⲥ. ⲛⲁⲣⲉ ⲟⲩⲕⲟⲩϫⲓ ⲛ̀ⲟⲩⲥⲓⲁ ϣⲟⲡ ⲛⲱⲟⲩ ⲡⲉ ⲉⲩϭⲟϩ ⲉⲃⲟⲗ ⲛ̀ϧⲏⲧⲥ ⲛ̀ⲛⲓϩⲏⲕⲓ ⲛⲉⲙ ⲛⲓϣⲉⲙⲙⲱⲟⲩ.</em></p>
+			<p><em>Ⲡⲓⲇⲓⲁⲃⲟⲗⲟⲥ ⲇⲉ ⲙ̀ⲡⲉϥϣϥⲁⲓ ⲉⲣⲟϥ ⲉϥⲛⲁⲩ ⲉ ⲡⲁⲓⲛⲓϣϯ ⲛ̀ⲁⲅⲁⲑⲟⲛ ⲉⲧⲉ ⲡⲓⲛⲁⲓ ⲡⲉ ⲉⲧⲟⲩⲓⲣⲓ ⲙ̀ⲙⲟϥ ϧⲉⲛ ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲁϥϣⲉ ⲛⲁϥ ⲉϧⲟⲩⲛ ⲉⲡϩⲏⲧ ⲛ̀ⲟⲩⲁⲫⲉ ⲛ̀ⲥⲟⲛⲓ ϧⲉⲛ ⲛⲓϭⲓⲏ ⲉⲧⲉⲙⲙⲁⲩ ⲉⲑⲣⲉϥϭⲓ ⲛⲉⲙⲁϥ ⲛ̀ⲛⲓⲣⲱⲙⲓ ⲧⲏⲣⲟⲩ ⲉⲧⲟⲓ ⲛ̀ⲥⲟⲛⲓ ⲉⲧⲙⲟϣⲓ ⲛⲉⲙⲁϥ ϧⲉⲛ ⲡⲓⲉϫⲱⲣϩ ⲉ ϯⲙⲟⲛⲏ ⲉⲧⲉⲙⲙⲁⲏ ⲛ̀ⲧⲉϥϣⲟⲗⲥ.</em></p>
+			<p><em>Ⲉⲧⲁϥϫⲱ ⲇⲉ ⲙ̀ⲡⲓⲥⲁϫⲓ ⲛ̀ⲛⲉϥⲣⲱⲙⲓ ⲁⲩⲣⲁϣⲓ ⲉⲙⲁϣⲱ ⲥⲁⲧⲟⲧⲟⲩ ⲇⲉ ⲁⲩⲓ̀ ⲉ ϯⲙⲟⲛⲏ ⲛⲁⲩϯ ⲛ̀ϩⲑⲏⲟⲩ ⲉⲣⲟⲥ ⲡⲉ ϫⲉ ⲁⲩⲛⲁϭⲓⲧⲥ ⲛ̀ⲁϣ ⲛ̀ⲣⲏϯ ⲟⲩⲟϩ ⲛⲁⲩϫⲓⲙⲓ ⲙ̀ⲡⲓⲣⲏϯ ⲁⲛ ⲡⲉ ϫⲉⲟⲩⲏⲓ ⲛⲁⲣⲉ ⲡⲓⲥⲟⲃⲧ ⲛ̀ⲧⲉ ϯⲙⲟⲛⲏ ⲧⲁϫⲣⲏⲟⲩⲧ ⲛ̀ⲕⲁⲗⲱⲥ ⲡⲉ ⲛⲓⲥⲓⲛⲱⲟⲩⲓ ⲇⲉ ⲉⲧⲁⲩⲛⲁⲩ ⲉ ⲧⲟⲩⲙⲉⲧⲁⲧϫⲟⲙ ⲁⲩⲉⲣⲙ̀ⲕⲁϩ ⲛ̀ϩⲏⲧ. ⲡⲓⲁⲫⲉ ⲛ̀ⲥⲟⲛⲓ ⲇⲉ ⲁϥⲥⲁϫⲓ ⲛⲉⲙⲱⲟⲩ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲓⲙⲏϯ ⲛ̀ⲧⲉⲧⲉⲛⲓⲣⲓ ⲕⲁⲧⲁ ⲫⲣⲏϯ ⲉ ϯⲛⲁϫⲟⲥ ⲛⲱⲧⲉⲛ ⲙ̀ⲙⲟⲛ ϣϫⲟⲙ ⲙ̀ⲙⲱⲧⲉⲛ ⲉ ⲱⲗⲓ ⲛ̀ϩⲗⲓ ⲉⲃⲟⲗ ⲛ̀ϧⲏⲧⲥ. ⲛ̀ⲑⲱⲟⲩ ⲇⲉ ⲡⲉϫⲱⲟⲩ ⲛⲁϥ ⲇⲉ ⲫⲏ ⲉⲧⲉⲕⲛⲁϫⲟϥ ⲛⲁⲛ ⲧⲉⲛⲛⲁⲁⲓϥ.</em></p>
+			<p class="footnote">1. Récits de l'abbé Daniel (VI<sup>e</sup> siècle) dans la <i>Revue de l'Orient chrétien, V. p. 545.</p>
+			<p><em>Ⲡⲉϫⲁϥ ⲛⲱⲟⲩ ϫⲉ ⲧⲱⲟⲩⲛⲟⲩ ⲛ̀ⲧⲉⲧⲉⲛϫⲓⲙⲓ ⲛⲏⲓ ⲛ̀ϩⲁⲛϩⲃⲱⲥ ⲙ̀ⲙⲟⲛⲁⲭⲟⲥ ⲟⲩⲃⲁⲗⲗⲓⲛ ⲛ̀ⲭⲁⲙⲉ ⲛⲉⲙ ⲟⲩⲭⲗⲁϥⲧ ⲉⲧⲙⲉϩ ⲛ̀ⲥⲧⲁⲩⲣⲟⲥ ⲙ̀ⲡⲓⲛⲓ ⲛ̀ⲁⲃⲃⲁ ⲇⲁⲛⲓⲏⲗ ⲛ̀ⲧⲉ ϣⲓⲏⲧ ⲉϣⲱⲡ ⲛ̀ⲧⲉ ⲡⲓⲛⲁⲩ ⲉⲣⲡⲣⲟⲕⲟⲡⲧⲓⲛ ϯⲛⲁⲧⲏⲓⲧⲟⲩ ϩⲓⲱⲧ ⲛ̀ⲧⲁϭⲓ ⲛ̀ⲟⲩⲃⲁⲓ ϧⲉⲛ ⲧⲁϫⲓϫ ϯⲛⲁⲕⲱⲗϩ ϩⲓⲣⲛ ⲫⲣⲟ ⲛ̀ϯⲙⲟⲛⲏ ⲟⲩⲟϩ ⲉϣⲱⲡ ⲛ̀ⲧⲟⲩⲛⲁⲩ ⲉⲣⲟⲓ ⲥⲉⲛⲁⲁⲟⲩⲱⲛ ⲛⲏⲓ ⲉⲑⲃⲏⲧϥ ⲟⲩⲟϩ ⲁⲛⲟⲕ ϩⲱ ϯⲛⲁⲧⲁⲙⲱⲧⲉⲛ ⲛ̀ⲭⲱⲗⲉⲙ ⲛ̀ⲧⲉⲧⲉⲛϭⲓⲧⲥ ϧⲉⲛ ⲟⲩⲙ̀ⲧⲟⲛ.</em></p>
+			<p><em>Ⲉⲧⲁⲩⲥⲱⲧⲉⲙ ⲇⲉ ⲉ ⲛⲁⲓ ⲁⲩⲣⲁϣⲓ ⲉⲙⲁϣⲱ ⲟⲩⲟϩ ⲁⲏⲕⲱϯ ϧⲉⲛ ⲟⲩⲥⲡⲟⲩⲇⲏ ⲁⲩⲓⲛⲓ ⲛⲁϥ ⲛ̀ⲛⲓϩⲃⲱⲥ ⲕⲁⲧⲁ ϯϧⲉ ⲉⲧⲁϥϫⲟⲥ ⲛⲱⲟⲩ ⲟⲩⲟϩ ⲉⲧⲁ ⲡⲓⲛⲁⲩ ϣⲱⲡⲓ ⲁϥⲧⲱⲛϥ ⲛ̀ϫⲉ ⲡⲓⲁⲫⲉ ⲛ̀ⲥⲟⲛⲓ ⲁϥϯ ⲛ̀ⲛⲓϩⲃⲱⲥ ϩⲓⲱⲧϥ ⲁϥϭⲓ ⲛ̀ⲟⲩⲃⲁⲓ ϧⲉⲛ ⲧⲉϥϫⲓϫ ⲁϥⲓ̀ ϩⲓⲣⲉⲛ ⲫⲣⲟ ⲛ̀ϯⲙⲟⲛⲏ.</em></p>
+			<p><em>Ⲉⲧⲁϥⲕⲱⲗϩ ⲉϧⲟⲩⲛ ⲁ ϯⲙ̀ⲛⲟⲩⲧ ⲉⲣⲟⲩⲱ ⲛⲁϥ ϫⲉ ⲛ̀ⲑⲟⲕ ⲫⲁ ⲑⲱⲛ ⲡⲁⲓⲱⲧ ⲓⲉ ⲉⲕⲉⲣ ⲉⲛⲭⲣⲓⲁ ⲛ̀ⲟⲩ ⲛ̀ⲑⲟϥ ⲇⲉ ⲡⲉϫⲁϥ ⲛⲁⲥ ϫⲉ ⲙⲁϣⲉ ⲛⲉ ⲁϫⲟⲥ ⲛ̀ϯⲁⲙⲙⲁ ϫⲉ ⲁⲃⲃⲁ ⲇⲁⲛⲓⲏⲗ ⲡⲓⲡⲣⲉⲥⲃⲏⲧⲉⲣⲟⲥ ⲛ̀ⲧⲉ ϣⲓⲏⲧ ϥⲟϩⲓ ⲉⲣⲁⲧϥ ϩⲓⲣⲉⲛ ⲡⲓⲣⲟ ϫⲉ ϣⲟⲡⲧ ⲉⲣⲟ ϣⲁ ϩⲁⲛⲁⲧⲟⲟⲩⲓ.</em></p>
+			<p><em>Ϯⲙ̀ⲛⲟⲩⲧ ⲇⲉ ⲁⲥϣⲉ ⲛⲁⲥ ⲁⲥϫⲱ ⲙ̀ⲡⲁⲓⲥⲁϫⲓ ⲛ̀ϯⲁⲙⲙⲁ ϫⲉ ⲡⲉⲛⲓⲱⲧ ⲁⲃⲃⲁ ⲇⲁⲛⲓⲏⲗ ⲡⲓⲡⲣⲉⲥⲃⲩⲧⲉⲣⲟⲥ ⲛ̀ⲧⲉ ϣⲓⲏⲧ ϥⲟϩⲓ ⲉⲣⲁⲧϥ ϩⲓⲣⲉⲛ ⲡⲓⲣⲟ ⲟⲩⲟϩ ⲛⲁⲓ ⲁϥϫⲟⲧⲟⲩ ⲛⲏⲓ ⲉⲑⲣⲓϫⲟⲧⲟⲩ ⲛⲉ. ϧⲉⲛ ⲡϫⲓⲛⲑⲣⲉⲥⲥⲱⲧⲉⲙ ϫⲉ ⲁⲃⲃⲁ ⲇⲁⲛⲓⲏⲗ ϩⲓⲣⲉⲛ ⲡⲓⲣⲟ ⲁⲥⲧⲱⲛⲥ ⲥⲁⲧⲟⲧⲥ ⲛⲉⲙ ⲛⲓⲥⲛⲏⲟⲩ ⲧⲏⲣⲟⲩ ⲁⲩϭⲟϫⲓ ⲉⲃⲟⲗ ϩⲓⲣⲉⲛ ⲡⲓⲣⲟ ⲁⲩϯⲫⲓ ⲉ ⲛⲉⲛϭⲁⲗⲁⲩϫ ⲙ̀ⲡⲓⲣⲱⲙⲓ ⲁⲩⲉⲛϥ ⲉϧⲟⲩⲛ ϧⲉⲛ ⲟⲩⲧⲓⲙⲏ.</em></p>
+			<p><em>Ϯⲁⲙⲙⲁ ⲇⲉ ⲛⲉⲙ ⲛⲓⲥⲛⲏⲟⲩ ⲁⲩϯ ⲙ̀ⲡⲓⲙⲱⲟⲩ ⲉ ϯⲗⲁⲕⲁⲛⲏ ⲁⲩⲓⲱⲓ ⲛ̀ⲛⲉϥϭⲁⲗⲁⲩϫ ⲉⲃⲟⲗ. ⲟⲩⲟϩ ⲉⲧⲁⲩⲟⲩⲱϣ ⲉⲑⲣⲟⲩⲫⲱⲣϣ ⲛⲁϥ ⲥⲁⲡϣⲱⲓ ⲛ̀ϯⲙⲟⲛⲏ ⲁϥⲧⲁϩⲛⲟ ⲙ̀ⲙⲱⲟⲩ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ϥⲟⲛϧ ⲛ̀ϫⲉ ⲡϭⲟⲓⲥ ϫⲉ ϯⲛⲁⲥⲉⲛ ⲡⲁⲓⲙⲁ ⲉⲃⲟⲗ ⲁⲛ ϣⲁ ϣⲱⲣⲡ.</em></p>
+			<p><em>Ⲉⲧⲁⲩⲕⲏⲛ ⲉⲩⲓⲱⲓ ⲛ̀ⲛⲉϥϭⲁⲗⲁⲩϫ ⲉⲃⲟⲗ ⲁ ϯⲁⲙⲙⲁ ϭⲓ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲓⲙⲱⲟⲩ ⲁⲥⲭⲱ ϩⲓϫⲉⲛ ⲧⲉⲥⲁⲫⲉ ⲛⲉⲙ ⲡⲉⲥϩⲟ ⲡⲁⲓⲣⲏϯ ⲟⲛ ⲛⲓⲥⲛⲏⲟⲩ ⲧⲏⲣⲟⲩ ⲛⲁⲩϭⲓ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲓⲙⲱⲟⲩ ⲛ̀ⲧⲉ ϯⲗⲁⲕⲁⲛⲏ ⲉⲩⲭⲱ ⲉϫⲉⲛ ⲧⲟⲩⲁⲫⲉ ⲛⲉⲙ ⲡⲟⲩϩⲟ ϧⲉⲛ ⲟⲩⲛⲁϩϯ.</em></p>
+			<p><em>Ⲛⲉ ⲟⲩⲟⲛ ⲟⲩⲥⲱⲛⲓ ϧⲉⲛ ⲛⲓⲥⲛⲏⲟⲩ ⲉⲥⲟⲓ ⲛ̀ⲃⲉⲗⲗⲏ ⲓⲥϫⲉⲛ ⲧⲉⲥⲙⲉⲧⲕⲟⲩϫⲓ ⲉⲧⲁⲥⲥⲱⲧⲉⲙ ϩⲱⲥ ⲉ ⲡⲓⲣⲁϣⲓ ⲛ̀ⲧⲉ ⲛⲓⲥⲛⲏⲟⲩ ⲡⲉϫⲁⲥ ⲛⲱⲟⲩ ϫⲉ ⲙⲟⲓ ⲛⲏⲓ ϩⲱ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲓⲙⲱⲟⲩ ⲛ̀ⲧⲉ ⲡⲓϧⲉⲗⲗⲟ. ⲛ̀ⲑⲱⲟⲩ ⲇⲉ ⲁⲩⲁⲙⲟⲛⲓ ⲙ̀ⲙⲟⲥ ⲁⲩⲉⲛⲥ ⲉϫⲉⲛ ϯⲗⲁⲕⲁⲛⲏ ⲁⲥⲱϣ ⲉⲃⲟⲗ ⲉⲥϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲱⲟⲩ ⲛ̀ⲓⲁⲧⲕ ⲛ̀ⲑⲟⲕ ⲡⲁⲓⲱⲧ ⲉⲑⲟⲩⲁⲃ ⲁⲃⲃⲁ ⲇⲁⲛⲓⲏⲗ ⲫϯ ⲛⲉⲙ ⲡⲉⲕⲣⲁⲛ ⲛⲁⲓ ⲛⲏⲓ.</em></p>
+			<p><em>Ⲟⲩⲟϩ ⲁⲥⲙⲟϩ ⲛ̀ⲧⲉⲥϫⲓϫ ⲙ̀ⲙⲱⲟⲩ ⲁⲥϩⲓⲧⲥ ⲉϫⲉⲛ ⲡⲉⲥϩⲟ ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲁⲥⲛⲁⲩ ⲙ̀ⲃⲟⲗ. ⲱ ⲟⲩⲏⲣ ⲡⲉ ⲡⲓⲱϣ ⲉⲃⲟⲗ ⲛⲉⲙ ⲡⲓⲣⲁϣⲓ ⲛ̀ⲧⲉ ⲛⲓⲥⲛⲏⲟⲩ ⲧⲏⲣⲟⲩ ⲙ̀ⲡⲓⲛⲁⲩ ⲉⲧⲉⲙⲙⲁⲩ ⲉⲩϭⲟϫⲓ ⲉⲩϯⲫⲓ ⲉ ⲛⲉⲛϭⲁⲗⲁⲩϫ ⲙ̀ⲡⲓⲣⲱⲙⲓ ⲛ̀ⲥⲟⲛⲓ ⲛ̀ϩⲟⲩⲟ ⲇⲉ ⲑⲏ ⲉⲧⲁⲥⲛⲁⲩ ⲙ̀ⲃⲟⲗ ⲉⲥⲱϣ ⲉⲃⲟⲗ ⲉⲥϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲱⲟⲩ ⲛ̀ⲓⲁⲧⲕ ⲡⲁⲓⲱⲧ ⲉⲑⲟⲩⲁⲃ ϫⲉ ϩⲓⲧⲉⲛ ⲡⲓⲙⲱⲟⲩ ⲛ̀ⲧⲉ ⲛⲉⲕϭⲁⲗⲁⲩϫ ⲁⲕϯ ⲙ̀ⲫⲟⲩⲱⲓⲛⲓ ⲛⲏⲓ ⲛ̀ⲕⲉⲥⲟⲡ.</em></p>
+			<p><em>Ⲡⲓϫⲱϫ ⲛ̀ⲥⲟⲛⲓ ⲇⲉ ⲉⲧⲁϥⲛⲁⲩ ⲉ ⲛⲁⲓ ⲁ ⲟⲩⲥⲑⲉⲣⲧⲉⲣ ⲛⲉⲙ ⲟⲩϩⲟϯ ⲧⲁϩⲟϥ ⲙⲉⲛⲉⲛⲥⲁ ⲑⲣⲉ ⲛⲓⲥⲛⲏⲟⲩ ⲧⲏⲣⲟⲩ ϩⲓⲛⲓⲙ ⲛ̀ⲑⲟϥ ⲇⲉ ⲙ̀ⲡⲉϥⲉⲛⲕⲟⲧ ⲉⲡⲧⲏⲣϥ ⲁⲗⲗⲁ ⲛⲁϥϩⲉⲙⲥⲓ ⲡⲉ ⲉϥⲣⲓⲙⲓ ϣⲁⲧⲉ ⲛⲉϥⲉⲣⲙⲱⲟⲩⲓ ϩⲱⲣⲡ ⲙ̀ⲡⲓⲕⲁϩⲓ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲟⲩⲟⲓ ⲛⲏⲓ ⲁⲛⲟⲕ ϧⲁ ⲡⲓϫⲱⲃ ⲛ̀ⲣⲉϥⲉⲣⲛⲟⲃⲓ ϫⲉ ⲁⲓϭⲟ ⲙ̀ⲡⲁⲥⲏⲟⲩ ⲧⲏⲣϥ ⲉⲃⲟⲗ ⲛ̀ⲕⲁⲗⲱⲥ ϧⲉⲛ ⲟⲩⲛⲓϣϯ ⲙ̀ⲙⲉⲧⲉⲫⲗⲏⲟⲩ.</em></p>
+			<p><em>Ⲓⲥϫⲉ ⲡⲁⲓⲣⲱⲙⲓ ⲙ̀ⲙⲁⲩⲁⲧϥ ⲁⲓⲧⲁⲗⲟ ⲙ̀ⲡⲉϥⲣⲁⲛ ⲉⲣⲟⲓ ⲁϥⲑⲣⲉ ⲛⲓⲙⲱⲟⲩ ⲛ̀ⲧⲉ ⲛⲁϭⲁⲗⲁⲩϫ ϯ ⲙ̀ⲫⲟⲩⲱⲓⲛⲓ ⲛ̀ⲛⲓⲃⲉⲗⲗⲉⲩ ⲓⲉ ⲟⲩⲁϣ ⲛ̀ⲣⲏϯ ⲡⲉ ⲡⲓⲣⲱⲙⲓ ⲉⲧⲉⲙⲙⲁⲩ<sup class="footnote">1</sup> ⲟⲩⲟⲓ ⲛⲏⲓ ⲁⲛⲟⲕ ϧⲁ ⲡⲓϫⲱⲃ ⲛ̀ⲣⲉϥⲉⲣⲛⲟⲃⲓ ϫⲉ ⲁⲓϣⲱⲡⲓ ⲉⲓⲟⲓ ⲛ̀ⲁⲙⲉⲗⲉⲥ ⲉ ⲡⲁⲟⲩϫⲁⲓ.</em></p>
+			<p><em>Ⲛⲁⲓ ⲇⲉ ⲉⲣⲉ ⲡⲓⲥⲟⲛⲓ ϫⲱ ⲙ̀ⲙⲱⲟⲩ ⲉϥⲣⲓⲙⲓ ⲛⲉϥⲣⲱⲙⲓ ⲇⲉ ϩⲱⲟⲩ ⲁⲩⲉⲣ ⲡⲓⲉϫⲱⲣϩ ⲧⲏⲣϥ ϩⲓⲣⲉⲛ ⲡⲓⲣⲟ ⲛⲉⲙ ⲛⲓⲥⲏϥⲓ ⲉⲩⲟϩⲓ ⲛⲁϥ ⲉⲑⲣⲉϥⲟⲩⲱⲛ ⲛⲱⲟⲩ ⲟⲩⲟϩ ⲛⲁϥϭⲓⲥⲙⲏ ⲉⲣⲱⲟⲩ ⲡⲉ ⲉϥⲭⲱ ⲛ̀ⲣⲱϥ ⲙ̀ⲡⲉϥⲥⲁϫⲓ. Ⲉⲧⲁ ⲡⲓⲟⲩⲱⲓⲛⲓ ⲇⲉ ⲓ ⲉⲃⲟⲗ ⲉⲩⲭⲏ ϩⲓⲣⲉⲛ ⲡⲓⲣⲟ ⲙ̀ⲫⲣⲏϯ ⲛ̀ϩⲁⲛⲟⲩⲱⲣ<sup class="footnote">2</sup> ⲁⲩⲕⲟⲧⲟⲩ ⲉ ⲡⲟⲩⲙⲁ ⲛ̀ⲕⲉⲥⲟⲡ ϧⲉⲛ ⲟⲩϣⲓⲡⲓ.</em></p>
+			<p class="footnote">1. 342.</p>
+			<p class="footnote">2. Pour <em>ⲟⲩϩⲱⲣ</em> <i>plur. de</i> <em>ⲟⲩϩⲟⲣ</em> «chien».</p>
+			<p><em>ⲉ ⲡⲉϥⲣⲁⲥϯ ⲇⲉ ⲁϥⲧⲱⲛϥ ⲛ̀ϫⲉ ⲡⲓⲥⲟⲛⲓ ⲁϥⲓ̀ ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ<sup class="footnote">1</sup> ⲛⲓⲥⲛⲏⲟⲩ ϧⲉⲛ ⲟⲩϩⲓⲣⲏⲛⲏ ⲉϥⲙⲟϣⲓ ⲇⲉ ϩⲓ ⲡⲓⲙⲱⲓⲧ ⲁ ⲛⲓⲥⲓⲛⲱⲟⲩⲓ ⲕⲱϯ ⲉⲣⲟϥ ⲡⲉϫⲱⲟⲩ ⲛⲁϥ ϫⲉ ⲟⲩ ⲡⲉⲧⲁϥϣⲱⲡⲓ ⲙ̀ⲙⲟⲕ ⲙ̀ⲡⲁⲓⲉϫⲱⲣϩ ⲧⲏⲣϥ.</em></p>
+			<p><em>Ⲡⲉϫⲁϥ ⲛⲱⲟⲩ ϫⲉ ⲙ̀ⲙⲟⲛ ϩⲱⲃ ⲛ̀ⲧⲏⲓ ⲛⲉⲙⲱⲧⲉⲛ ⲛ̀ⲕⲉⲥⲟⲡ ⲡⲉϫⲱⲟⲩ ⲛⲁϥ ϫⲉ ⲉⲑⲃⲉ ⲟⲩ ⲛ̀ⲑⲟϥ ⲇⲉ ⲁϥⲧⲁⲙⲱⲟⲩ ⲉ ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉⲧⲁⲩϣⲱⲡⲓ ⲙ̀ⲙⲟϥ ⲥⲁⲧⲟⲧϥ ⲁϥϯ ⲙ̀ⲡⲉϥⲟⲩⲟⲓ ⲉ ϣⲓⲏⲧ ϣⲁ ⲡⲉⲛⲓⲱⲧ ⲉⲑⲟⲩⲁⲃ ⲁⲃⲃⲁ ⲇⲁⲛⲓⲏⲗ ⲁϥⲉⲣⲁⲡⲟⲇⲁⲍⲉⲥⲑⲉ ⲛ̀ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉ ⲁϥϣⲱⲡⲓ ⲛ̀ⲟⲩⲥⲱⲧⲡ ⲙ̀ⲙⲟⲛⲁⲭⲟⲥ ϣⲁ ⲡⲓⲉϩⲟⲟⲩ ⲛ̀ⲧⲉ ⲡⲉϥⲙⲟⲩ.</em></p>
+			<p>Panégyrique de Saint Pierre d'Alexandrie<sup class="footnote">2</sup>.</p>
+			<p><em></em></p>
+			<p class="footnote">1. Le texte a <em>ϧⲓⲧⲉⲛ</em>.</p>
+			<p class="footnote">2. Les Actes des Martyrs de l'Égypte, par <i>Henri Hyvernat.</i> Paris, 1886. (p. 253–261).</p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p class="footnote">1. <em class="gr">ὡς</em> «comme si».</p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p class="footnote">1. Le sujet du vorbe <em>ϯ</em> est «le Roi».</p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p>Paraphrase du Pater<sup class="footnote">1</sup>.</p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p class="footnote">1. Catenæ in Evangelia ægyptiacæ quæ supersunt. Gottingæ, 1886. Edité par <i>Paul de Lagarde</i>. (p. 12–14).</p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p class="footnote">1. Le mot <em>ⲡⲓⲣⲁⲥⲙⲟⲥ</em> (<em class="gr">πειρασμός</em>) ne prend pas toujours l'article <em>ⲡⲓ</em> parce qu'il commence déjà par <em>ⲡⲓ</em>.</p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p class="footnote">1. «De plus grands que nous».</p>
+			<p><em></em></p>
+			<p>Exorde du panégyrique de l'archange Saint Michel par Théodose, patriarche d'Alexandrie<sup class="footnote">1</sup>.</p>
+			<p><em></em></p>
+			<p class="footnote">1. Saint Michel the Archangel… edited by <i>Wallis Budge</i>. London 1894, p. 2.</p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p class="footnote">1. Pour <em>ⲱⲡⲧ</em> «charger».</p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p class="footnote">1. «Mais, dira (le contradicteur)».</p>
+			<p>Martyre de Saint Macaire d'Antioche<sup class="footnote">1</sup>.</p>
+			<p>I</p>
+			<p><em></em></p>
+			<p class="footnote">1. Les actes des Martyrs de l'Egypte, par <i>Henri Hyvernat</i>. Paris 1886.</p>
 		</div>
 <div id="liste_de_textes">
 			<p>Liste des Textes.</p>
