--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -27,9 +27,8 @@
 			<p class="right"><span class="uppercase">Alexis Mallon s. j.</span></p>
 		</div>
 		<div id="toc">
-			<h2>Table des matières.</h2>
-			<p>Pages</p>
-			<p>Grammaire.</p>
+			<h1>Table des matières.</h1>
+			<h2>Grammaire.</h2>
 			<p>Introduction: la langue copte.</p>
 			<ol class="decimal">
 				<li><a href="#phonetique">Phonétique <span>7–23</span></a>
@@ -439,14 +438,14 @@
 			<div id="intro">
 				<h3>Introduction.</h3>
 				<p>La Langue Copte.</p>
-				<p><b>I. Origine.</b> La langue copte n'est autre que la langue égyptienne dans sa dernière période.</p>
+				<p><h4>I. Origine.</h4> La langue copte n'est autre que la langue égyptienne dans sa dernière période.</p>
 				<p>L'égyptien a été parlé, dans la vallée du Nil, depuis une époque qui échappe à l'histoire. Les plus anciens documents écrits qui subsistent encore peuvent dater de 4000 ans avant Jésus-Christ. Durant cette longue période, la langue a subi plusieurs transformations et considérablement évolué. Le copte est le dernier stade de cette évolution.</p>
 				<p>Commençant avec le Christianisme en Egypte, la langue copte fleurit jusqu'à la conquête musulmane (7<sup>e</sup> siècle). A partir de cette époque, elle fut peu à peu supplantée par l'arabe et cessa complètement d'être parlée vers le 17<sup>e</sup> siècle.</p>
 				<p>Elle est aujourd'hui encore employée dans la liturgie.</p>
 				<p>Le copte a été écrit au moins dès le 3<sup>e</sup> siècle, il possède une littérature en majeure partie biblique et ecclésiastique; les textes purement profanes sont relativement peu nombreux.</p>
-				<p><b>II. Alphabet.</b> L'égyptien proprement dit employait trois sortes de caractères: les hiéroglyphes, écriture monumentale; les caractères hiératiques, écriture cursive des papyrus, déjà en usage dans l'Ancien Empire; les caractères démotiques, écriture plus cursive encore de la Basse-Epoque<sup class="footnote">1</sup>.</p>
+				<p><h4>II. Alphabet.</h4> L'égyptien proprement dit employait trois sortes de caractères: les hiéroglyphes, écriture monumentale; les caractères hiératiques, écriture cursive des papyrus, déjà en usage dans l'Ancien Empire; les caractères démotiques, écriture plus cursive encore de la Basse-Epoque<sup class="footnote">1</sup>.</p>
 				<p>Le copte<sup class="footnote">2</sup> s'écrit au moyen de l'alphabet grec augmenté de sept caractères démotiques. Ce changement d'alphabet eut pour cause, d'un côté l'extrême complication où était tombée l'écriture démotique, de l'autre la grande facilité que présentait l'alphabet de la langue grecque, alors très répandue, au moins parmi les gens instruits, dans la vallée du Nil.</p>
-				<p><b>III. Dialectes.</b> On connaît actuellement du copte cinq dialectes qui sont:</p>
+				<p><h4>III. Dialectes.</h4> On connaît actuellement du copte cinq dialectes qui sont:</p>
 				<p><b>1. Le Bohairique</b> (de l'arabe <em class="ar">البحيرة</em> la Basse-Egypte), nommé autrefois à tort Memphitique. Il était parlé dans le Delta; mais, grâce à l'influence du patriarcat qui d'Alexandrie se transporta au Caire, au onzième siècle, il devint la langue officielle de l'Eglise d'Egypte et seul il s'est conservé jusqu'à nos jours dans la liturgie. Abréviation B (dans les livres anciens M).</p>
 				<p><b>2. Le Ṣaꜥìdique</b><sup class="footnote">3</sup> (de l'arabe <em class="ar">الصعيد</em> la Haute-Egypte), appelé aussi Thébain; ce fut la langue de la Thébaïde et plus tard de toute la Haute-Egypte. Abréviation S (anciennement T).</p>
 				<p class="footnote">1) «Hiéroglyphe», de <em class="gr">ἱερός</em> <i>sacré</i> et <em class="gr">γλύφω</em> <i>je grave</i>, signifie <i>caractère sacré</i>. «Hiératique» dérive de <em class="gr">ἱερατικός</em> <i>sacerdotal</i>; ce genre d'écriture a été ainsi appelé parce qu'à l'origine il était employé par les prêtres. Enfin l'écriture «démotique», de <em class="gr">δημοτικός</em> <i>populaire</i>, était en usage dans le peuple à l'époque gréco-romaine; elle servait surtout à rédiger les contrats et les lettres. C'est pourquoi les Grecs lui donnèrent le nom d'écriture <i>épistoloqraphique</i>.</p>
@@ -457,7 +456,7 @@
 				<p><b>5. Le Memphitique (M)</b>, parlé dans la province de Memphis et remplacé plus tard par le Boḥairique.</p>
 				<p>De ces cinq dialectes le Boḥairique et le Ṣaꜥìdique sont les deux plus importants et les deux plus riches en documents.</p>
 				<p>Dans cette grammaire nous étudierons spécialement le dialecte boḥairique; nous donnerons à la fin un tableau des formes ṣaꜥìdiques les plus importantes. Nous indiquerons dans la chrestomathie les principales différences des autres dialectes. La méthode pratique pour apprendre la langue copte est. de se familiariser d'abord avec un dialecte et d'aborder ensuite l'étude des autres en les comparant avec celui qu'on connaît déjà.</p>
-				<p><b>IV. Mots étrangers.</b> Un grand nombre de mots grecs sont entrés dans la langue copte, et cela parce que la plupart des ouvrages coptes ont été traduits du grec. L'adoption des mots était d'autant plus facile qu'on avait déjà adopté l'alphabet.</p>
+				<p><h4>IV. Mots étrangers.</b> Un grand nombre de mots grecs sont entrés dans la langue copte, et cela parce que la plupart des ouvrages coptes ont été traduits du grec. L'adoption des mots était d'autant plus facile qu'on avait déjà adopté l'alphabet.</p>
 				<p>En outre, les Coptes ne trouvaient pas toujours dans leur langue nationale les termes propres pour exprimer les nouvelles idées apportées par le Christianisme; ou même ils auraient cru profaner les choses saintes en les appelant de noms qui pour eux ne signifiaient rien de sacré.</p>
 				<p>Ainsi, bien qu'ils eussent le mot <em>ⲛⲓϥⲓ</em> signifiant «souffle, esprit», ils préférèrent admettre le mot grec <em>ⲡⲛⲉⲩⲙⲁ</em> pour désigner le Saint-Esprit.</p>
 				<p>Si l'on considère de plus que le grec était, aux premiers siècles du Christianisme, fort répandu en Egypte, que la liturgie s'est longtemps célébrée en grec, on s'expliquera facilement les nombreux emprunts faits à la langue dont se servit Saint Marc pour annoncer l'Evangile aux Egyptiens.</p>
@@ -16828,6 +16827,208 @@
 			</table>
 		</div>
 		<div id="additions_et_corrections">
+		<p>Additions et Corrections.</p>
+		<table>
+			<tr>
+				<th>page</th>
+				<th>ligne</th>
+				<th></th>
+			</tr>
+			<tr>
+				<td>15,</td>
+				<td>13:</td>
+				<td>
+					<em>ⲉ-ⲣⲱ-ⲧⲉⲙ</em>, lire <em>ⲉ-ⲣⲱ-ⲧⲉⲛ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>206,</td>
+				<td>16:</td>
+				<td>ajoutez <em>ⲕⲟⲣϥ⸗</em> (Chrest. p. 84, l. 10). </td>
+			</tr>
+		</table>
+		<p>Dans la Chrestomathie:</p>
+		<table>
+			<tr>
+				<th>page</th>
+				<th>ligne</th>
+				<th></th>
+			</tr>
+			<tr>
+				<td>5,</td>
+				<td>14:</td>
+				<td>
+					<em>ⲛⲓⲥⲓⲟⲩⲣⲃ</em>, lire <em>ⲛⲓⲥⲓⲟⲩⲣⲃ̅</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>16,</td>
+				<td>7:</td>
+				<td>
+					<em>ϣⲱⲡⲓⲛⲁϥ</em>, lire <em>ϣⲱⲡⲓ ⲛⲁϥ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>49,</td>
+				<td>2:</td>
+				<td>
+					<em>ⲉⲩⲥⲟⲛ</em>, lire <em>ⲉⲩⲥⲟⲡ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>58,</td>
+				<td>13:</td>
+				<td>
+					<em>ⲙ̀ⲫⲏⲉⲧ</em>, lire <em>ⲙ̀ⲫⲏ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>59,</td>
+				<td>1:</td>
+				<td>
+					<em>ϫⲉϥⲟⲛϧ</em>, lire <em>ϫⲉ ϥⲟⲛϧ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>61,</td>
+				<td>18:</td>
+				<td>
+					<em>ⲟⲑⲟⲣⲁⲃ</em>, lire <em>ⲉⲑⲟⲩⲁⲃ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>67,</td>
+				<td>8:</td>
+				<td>
+					<em>ⲙⲉⲡⲉⲛⲥⲁ</em>, lire <em>ⲙⲉⲛⲉⲛⲥⲁ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>69,</td>
+				<td>6:</td>
+				<td>
+					<em>ⲉⲓϩⲓⲟⲓ</em>, lire <em>ⲉϩⲓⲟⲓ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>—,</td>
+				<td>9:</td>
+				<td>
+					<em>ⲡⲓⲁⲥⲉⲃⲏⲥ</em>, lire <em>ⲛⲓⲁⲥⲉⲃⲏⲥ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>74,</td>
+				<td>6:</td>
+				<td>
+					<em>ϯⲁⲛⲧⲟⲗⲏ</em>, lire <em>ϯⲁⲛⲁⲧⲟⲗⲏ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>75,</td>
+				<td>5:</td>
+				<td>
+					<em>ⲧⲉⲛⲛⲁⲛϩϯ</em>, lire <em>ⲧⲉⲛⲛⲁⲛⲁϩϯ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>82,</td>
+				<td>17:</td>
+				<td>
+					<em>ⲛⲓⲥⲏⲟⲩⲧⲱⲟⲩⲛ</em>, lire <em>ⲛⲓⲑⲏⲟⲩ ⲧⲱⲟⲩⲛ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>83,</td>
+				<td>19, 21:</td>
+				<td>
+					<em>ⲛⲓⲁⲃⲓⲛ</em>, lire <em>ⲡⲓⲁⲃⲓⲛ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>87,</td>
+				<td>4:</td>
+				<td>
+					<em>ⲛⲓϩⲏⲅⲉⲙⲱⲛ</em>, lire <em>ⲡⲓϩⲏⲅⲉⲙⲱⲛ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>94,</td>
+				<td>6:</td>
+				<td>
+					<em>ⲡⲓϩⲏⲅⲥⲙⲱⲛ</em>, lire <em>ⲡⲓϩⲏⲅⲉⲙⲱⲛ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>97,</td>
+				<td>11:</td>
+				<td>
+					<em>ⲏⲁⲥⲱⲙⲁ</em>, lire <em>ⲡⲁⲥⲱⲙⲁ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>100,</td>
+				<td>11:</td>
+				<td>
+					<em>ⲥⲑⲟⲩⲁⲃ</em>, lire <em>ⲉⲑⲟⲩⲁⲃ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>—,</td>
+				<td>16:</td>
+				<td>
+					<em>ϣⲱⲏⲓ</em>, lire <em>ϣⲱⲡⲓ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>103,</td>
+				<td>1:</td>
+				<td>
+					<em>ⲉⲛⲓⲇⲏ</em>, lire <em>ⲉⲡⲓⲇⲏ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>104,</td>
+				<td>5:</td>
+				<td>devant <em>ⲡⲓϫⲟⲓ</em> mettre <em>ⲉ</em>. </td>
+			</tr>
+			<tr>
+				<td>106,</td>
+				<td>11:</td>
+				<td>
+					<em>ⲟⲓⲕⲟⲩⲙⲉⲛⲡ</em>, lire <em>ⲟⲓⲕⲟⲩⲙⲉⲛⲏ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>—,</td>
+				<td>12:</td>
+				<td>
+					<em>ⲛⲁⲓⲅⲓⲟⲥ</em>, lire <em>ⲛⲓⲁⲅⲓⲟⲥ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>107,</td>
+				<td>19, 20:</td>
+				<td>
+					<em>ϣⲏⲁⲓ</em>, lire <em>ϣⲏⲣⲓ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>108,</td>
+				<td>13:</td>
+				<td>
+					<em>ⲉⲣϣⲓϣ</em>, lire <em>ⲉⲣϣⲓϣⲓ</em>.
+				</td>
+			</tr>
+			<tr>
+				<td>109,</td>
+				<td>8:</td>
+				<td>
+					<em>ⲁⲣ-</em>, lire <em>ⲁϥ-</em>.
+				</td>
+			</tr>
+		</table>
+	</div>
 		<p>Additions et Corrections.</p>
 		<table>
 			<tr>
