--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1521,16 +1521,16 @@
 					<p class="footnote">7. Gen. 47, 23.</p>
 				</div>
 				<div id="section-071" class="section" data-section-no="71">
-					<p>4. <em>ⲛ̀ⲟⲩⲁⲧ⸗</em> «de soi-même».</p>
+	<p><b>4.</b> <em>ⲛ̀ⲟⲩⲁⲧ⸗</em> «de soi-même».</p>
 					<p>Ce mot, composé de <em>ⲛ̀</em> et de <em>ⲟⲩⲁⲓ</em> «un» est très rare, il n'a été trouvé que deux fois: <em>ⲛ̀ⲟⲩⲁⲧⲥ</em> «d'elle-même»<sup class="footnote">1</sup>; <em>ⲛ̀ⲟⲩⲁⲧⲟⲩ</em> «d'eux-mêmes»<sup class="footnote">2</sup>.</p>
 				</div>
 				<div id="section-072" class="section" data-section-no="72">
-					<p>5. <em>ⲣⲱ</em> «même».</p>
+					<p><b>5.</b> <em>ⲣⲱ</em> «même».</p>
 					<p>Ce mot est invariable et s'emploie comme <i>même</i> en français après les noms et les pronoms: <em>ⲁⲛⲟⲕ ⲣⲱ</em> «moi-même», <em>ⲛ̀ⲑⲟⲕ ⲣⲱ</em> «toi-même», <em>ⲫⲁⲓ ⲣⲱ</em> «celui-ci même», <em>ⲡⲁⲓ-ϣⲓ ⲣⲱ ⲣⲱ</em> «cette même mesure»<sup class="footnote">3</sup>.</p>
 					<p>Il s'emploie aussi adverbialement: <em>ⲙⲟⲛⲟⲛ ⲣⲱ ⲛ̀ⲑⲟϥ ⲙ̀ⲡⲉⲣⲧⲁⲥⲑⲟ ⲙ̀ⲡⲁϣⲏⲣⲓ ⲉⲙⲁⲩ</em> «seulement ne ramène pas mon fils là-bas»<sup class="footnote">4</sup>.</p>
 				</div>
 				<div id="section-073" class="section" data-section-no="73">
-					<p>6. <em>ⲉⲣⲏⲟⲩ</em> «ensemble».</p>
+					<p><b>6.</b> <em>ⲉⲣⲏⲟⲩ</em> «ensemble».</p>
 					<p>Ce mot doit être précédé des adjectifs possessifs du pluriel: <em>ⲛⲉⲛ-ⲉⲣⲏⲟⲩ</em>, <em>ⲛⲉⲧⲉⲛ-ⲉⲣⲏⲟⲩ</em>, <em>ⲛⲟⲩ-ⲉⲣⲏⲟⲩ</em>; <em>ⲛ̀ⲛⲟⲩⲉⲣⲏⲟⲩ</em> «à eux-mêmes, entr'eux»<sup class="footnote">5</sup>; <em>ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ</em> «entr'eux»<sup class="footnote">6</sup>; <em>ⲛⲉⲙ ⲛⲉⲛⲉⲣⲏⲟⲩ</em> «entre nous»<sup class="footnote">7</sup>.</p>
 					<p class="footnote">1. Act. 12, 10.</p>
 					<p class="footnote">2. Lév. 25, 5.</p>
@@ -1540,33 +1540,24 @@
 					<p class="footnote">6. Luc 22, 23.</p>
 					<p class="footnote">7. Z. 29.</p>
 				</div>
-				<h2>Chapitre III. Adjectifs et Pronoms Possessifs.</h2>
+				<h5>Chapitre III. Adjectifs et Pronoms Possessifs.</h5>
 				<p>Les adjectifs et pronoms possessifs sont formés de l'article et des pronoms personnels affixes.</p>
-				<p>I. Adjectifs possessifs.</p>
+				<h6>I. Adjectifs possessifs.</h6>
 				<div id="section-074" class="section" data-section-no="74">
 					<table>
 						<tr>
-							<th>Devant un nom sing.</th>
-							<th></th>
-							<th></th>
-							<th></th>
-							<th></th>
-							<th></th>
-							<th>Devant un nom</th>
-							<th></th>
+							<th colspan="2"></th>
+							<th colspan="4">Devant un nom sing.</th>
+							<th colspan="2">Devant un nom</th>
 						</tr>
 						<tr>
-							<td></td>
-							<td></td>
-							<td>masculin</td>
-							<td></td>
-							<td>féminin</td>
-							<td></td>
-							<td>pluriel</td>
-							<td></td>
+							<td colspan="2"></td>
+							<td colspan="2">masculin</td>
+							<td colspan="2">féminin</td>
+							<td colspan="2">pluriel</td>
 						</tr>
 						<tr>
-							<td>Sing.</td>
+							<td rowspan="5">Sing.</td>
 							<td>1.</td>
 							<td><em>ⲡⲁ-</em></td>
 							<td>mon</td>
@@ -1576,7 +1567,6 @@
 							<td>mes</td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>2 m.</td>
 							<td><em>ⲡⲉⲕ-</em></td>
 							<td>ton</td>
@@ -1586,7 +1576,6 @@
 							<td>tes</td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>f.</td>
 							<td><em>ⲡⲉ-</em></td>
 							<td>ton</td>
@@ -1596,7 +1585,6 @@
 							<td>tes</td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>3 m.</td>
 							<td><em>ⲡⲉϥ-</em></td>
 							<td>son</td>
@@ -1606,7 +1594,6 @@
 							<td>ses</td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>f.</td>
 							<td><em>ⲡⲉⲥ-</em></td>
 							<td>son</td>
@@ -1616,7 +1603,7 @@
 							<td>ses</td>
 						</tr>
 						<tr>
-							<td>Pl.</td>
+							<td rowspan="3">Pl.</td>
 							<td>1.</td>
 							<td><em>ⲡⲉⲛ-</em></td>
 							<td>notre</td>
@@ -1626,7 +1613,6 @@
 							<td>nos</td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>2.</td>
 							<td><em>ⲡⲉⲧⲉⲛ-</em></td>
 							<td>votre</td>
@@ -1636,7 +1622,6 @@
 							<td>vos</td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>3.</td>
 							<td><em>ⲡⲟⲩ-</em></td>
 							<td>leur</td>
@@ -1649,10 +1634,10 @@
 				</div>
 				<p><i>Syntaxe.</i></p>
 				<div id="section-075" class="section" data-section-no="75">
-					<p>1. L'article détermine l'objet <i>possédé</i> et s'accorde avec lui; l'affixe indique le <i>possesseur</i> et s'accorde avec lui: <em>ⲡⲁ-ⲏⲓ</em> «ma maison», <em>ⲛⲁ-ⲓⲟϯ</em> «mes pères», <em>ⲧⲉⲕ-ⲙⲁⲩ</em> «ta mère», <em>ⲛⲉⲛ-ⲓⲟϯ</em> «nos pères».</p>
+					<p><b>1.</b> L'article détermine l'objet <i>possédé</i> et s'accorde avec lui; l'affixe indique le <i>possesseur</i> et s'accorde avec lui: <em>ⲡⲁ-ⲏⲓ</em> «ma maison», <em>ⲛⲁ-ⲓⲟϯ</em> «mes pères», <em>ⲧⲉⲕ-ⲙⲁⲩ</em> «ta mère», <em>ⲛⲉⲛ-ⲓⲟϯ</em> «nos pères».</p>
 				</div>
 				<div id="section-076" class="section" data-section-no="76">
-					<p>2. Quand l'objet possédé est indéterminé, au lieu des formes précédentes, on emploie l'article indéfini avec la particule du génitif <em>ⲛ̀ⲧⲉ- ⲛ̀ⲧ⸗</em>: <em>ⲟⲩ-ⲏⲓ ⲛ̀ⲧⲁϥ</em> «une maison à lui <em class="ar">بيتٌ لهُ</em>» tandis que <em>ⲡⲉϥ-ⲏⲓ</em> signifie «sa maison <em class="ar">بيته</em>».</p>
+					<p><b>2.</b> Quand l'objet possédé est indéterminé, au lieu des formes précédentes, on emploie l'article indéfini avec la particule du génitif <em>ⲛ̀ⲧⲉ- ⲛ̀ⲧ⸗</em>: <em>ⲟⲩ-ⲏⲓ ⲛ̀ⲧⲁϥ</em> «une maison à lui <em class="ar">بيتٌ لهُ</em>» tandis que <em>ⲡⲉϥ-ⲏⲓ</em> signifie «sa maison <em class="ar">بيته</em>».</p>
 					<p><em>ⲁⲛⲟⲕ ⲟⲩϭⲣⲟⲙⲡⲓ ⲛ̀ⲧⲁⲕ</em> «je suis une de tes colombes»<sup class="footnote">1</sup>.</p>
 				</div>
 				<div id="section-077" class="section" data-section-no="77">
@@ -1661,7 +1646,7 @@
 					<p><em>ⲛⲏ ⲉⲑⲟⲩⲁⲃ ⲛ̀ⲧⲁⲕ</em> «tes saints»<sup class="footnote">3</sup>.</p>
 				</div>
 				<div id="section-078" class="section" data-section-no="78">
-					<p>3. L'adjectif possessif s'emploie devant les noms de nombre pour indiquer l'ordre des jours, sans que le mot «jour» soit exprimé:</p>
+					<p><b>3.</b> L'adjectif possessif s'emploie devant les noms de nombre pour indiquer l'ordre des jours, sans que le mot «jour» soit exprimé:</p>
 					<p><em>ⲡⲉϥϣⲟⲙⲧ</em> «le troisième jour».</p>
 					<p><em>ⲁⲛⲓ … ⲉ ⲧⲣⲱⲁⲥ ⲙ̀ⲡⲉⲛⲉ̅</em> «nous arrivâmes à Troas le cinquième jour»<sup class="footnote">4</sup>.</p>
 					<p>De même <em>ⲉ-ⲡⲉϥ-ⲣⲁⲥϯ</em> «le lendemain».</p>
@@ -1670,7 +1655,7 @@
 					<p>On doit toujours employer l'adjectif possessif formé de <em>ⲡ</em> et le faire accorder avec le sujet du verbe; <em>ⲡⲉϥ-ⲣⲁⲥϯ</em> «lendemain» est invariable parce que <em>ϥ</em> se rapporte au mot <em>ⲉϩⲟⲟⲩ</em> «jour» sous-entendu.</p>
 				</div>
 				<div id="section-080" class="section" data-section-no="80">
-					<p>4. L'adjectif possessif ne s'emploie pas devant les noms qui ne reçoivent pas l'article (54); le rapport de possession est indiqué dans ces mots par les pronoms suffixes, comme en arabe:</p>
+					<p><b>4.</b> L'adjectif possessif ne s'emploie pas devant les noms qui ne reçoivent pas l'article (54); le rapport de possession est indiqué dans ces mots par les pronoms suffixes, comme en arabe:</p>
 					<p><em>ⲣⲱ-ⲓ</em> <em class="ar">فمي</em> ma bouche,</p>
 					<p><em>ⲣⲁⲧ-ϥ</em> <em class="ar">رجله</em> son pied,</p>
 					<p><em>ϩⲣⲁ-ⲕ</em> <em class="ar">وجهك</em> ta face,</p>
